--- a/petrarch2/data/config/PETR_config.ini
+++ b/petrarch2/data/config/PETR_config.ini
@@ -5,7 +5,7 @@
 [Dictionaries]
 # See the PETRreader.py file for the purpose and format of these files
 verbfile_name    = CAMEO.2.0.txt
-actorfile_list   = Phoenix.Countries.actors.txt, Phoenix.International.actors.txt, Phoenix.MilNonState.actors.txt
+actorfile_list   = Phoenix.Countries.actors_test_5.txt, Phoenix.International.actors_test_5.txt, Phoenix.MilNonState.actors_test_5.txt
 agentfile_name   = Phoenix.agents.txt
 discardfile_name = Phoenix.discards.txt
 issuefile_name   = Phoenix.IssueCoding.txt
